k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-devops
  labels:
    app.kubernetes.io/part-of: demo-devops-java
