k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-devops-java
  labels:
    app.kubernetes.io/name: demo-devops-java
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: demo-devops-java
  ports:
    - name: http
      port: 80
      targetPort: http
