k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-devops-java
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30"
spec:
  ingressClassName: nginx
  rules:
    - host: demo-devops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-devops-java
                port:
                  name: http
